--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "react-native-safe-area-context": "^4.5.0",
     "react-native-screens": "^3.20.0",
     "react-native-vector-icons": "^9.2.0",
-    "react-native-webview": "^12.0.0",
+    "react-native-video": "^5.2.1",
+    "react-native-webview": "11.23.1",
     "react-native-youtube": "^2.0.2",
     "react-native-youtube-iframe": "^2.2.2"
   },
