--- a/package.json
+++ b/package.json
@@ -16,8 +16,11 @@
     "react": "17.0.2",
     "react-native": "0.68.0",
     "react-native-gesture-handler": "^2.9.0",
+    "react-native-image-crop-picker": "0.37.3",
+    "react-native-raw-bottom-sheet": "^2.2.0",
     "react-native-safe-area-context": "^4.5.0",
     "react-native-screens": "^3.20.0",
+    "react-native-stars": "^1.2.2",
     "react-native-vector-icons": "^9.2.0",
     "react-native-video": "^5.2.1",
     "react-native-webview": "11.23.1",
